# Extraction-API

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
extraction/: main.py
extraction/api/: marker.py  markitdown.py  unstructured.py
extraction/helper/common/: auth.py  logging.py  markdown.py
extraction/helper/marker/: bedrockService.py  markerHelper.py
extraction/helper/markitdown/: PdfToMarkdown.py  config.py  markitdownHelper.py
extraction/helper/schemas/: types.py
extraction/helper/unstructured/: unstructuredHelper.py
postman/latest/: Extraction-API.json
